@@ -19,6 +19,9 @@ Revision history for Net-XMPP2
            to SASL.
          - rewrote AnyEvent::XMPP::Ext::MUC a bit and made the API more sane.
            for example: join_room doesn't take a callback anymore.
+         - added more C<disco_feature> methods to the extensions, so that
+           they can be registered to an ::Ext::Disco extension to display
+           support for certain features.
 
 0.3 Mon Jan 28 23:00:58 CET 2009
          - fixed a bug in disconnect error reporting.
